// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WinterStoragePricing renders noData message when there is no data 1`] = `
<div
  class="card"
>
  <div
    class="cardHeader"
  >
    <span
      class="title"
    >
      Talvisäilytyspaikka
    </span>
  </div>
  <div
    class="cardBody"
  >
    <article
      class="section"
    >
      <section
        class="body"
      >
        Hinta €/m2 sisältäen palvelut. Hinnat sisältävät alv 25,5 %.
      </section>
    </article>
    <div>
      <div
        class="tableWrapper"
      >
        <div
          class="table basic noMainHeader"
          role="table"
          style="min-width: 112.5px;"
        >
          <div
            class="stickyHeaders"
          >
            <div
              class="header"
              role="row"
              style="display: flex; flex: 1 0 auto; min-width: 112.5px;"
            >
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; cursor: pointer;"
                title="Toggle SortBy"
              >
                Alue
                <div
                  class="sortArrowWrapper isSorted"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <rect
                        height="24"
                        width="24"
                      />
                      <polygon
                        fill="currentColor"
                        points="10 5.5 11.5 7 7.5 11 20 11 20 13 7.5 13 11.5 17 10 18.5 3.5 12"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; cursor: pointer;"
                title="Toggle SortBy"
              >
                Yksityinen
                <div
                  class="sortArrowWrapper"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <rect
                        height="24"
                        width="24"
                      />
                      <polygon
                        fill="currentColor"
                        points="10 5.5 11.5 7 7.5 11 20 11 20 13 7.5 13 11.5 17 10 18.5 3.5 12"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; cursor: pointer;"
                title="Toggle SortBy"
              >
                Yritys
                <div
                  class="sortArrowWrapper"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <rect
                        height="24"
                        width="24"
                      />
                      <polygon
                        fill="currentColor"
                        points="10 5.5 11.5 7 7.5 11 20 11 20 13 7.5 13 11.5 17 10 18.5 3.5 12"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; cursor: pointer;"
                title="Toggle SortBy"
              >
                Aika
                <div
                  class="sortArrowWrapper"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <rect
                        height="24"
                        width="24"
                      />
                      <polygon
                        fill="currentColor"
                        points="10 5.5 11.5 7 7.5 11 20 11 20 13 7.5 13 11.5 17 10 18.5 3.5 12"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 112.5px; width: 112.5px;"
              >
                Muokkaa
              </div>
            </div>
          </div>
          <div
            role="rowgroup"
          >
            <div
              class="rowWrapper"
              role="row"
            >
              <div
                class="tableCell"
              >
                Ei tietoja
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WinterStoragePricing renders normally 1`] = `
<div
  class="card"
>
  <div
    class="cardHeader"
  >
    <span
      class="title"
    >
      Talvisäilytyspaikka
    </span>
  </div>
  <div
    class="cardBody"
  >
    <article
      class="section"
    >
      <section
        class="body"
      >
        Hinta €/m2 sisältäen palvelut. Hinnat sisältävät alv 25,5 %.
      </section>
    </article>
    <div>
      <div
        class="tableWrapper"
      >
        <div
          class="table basic noMainHeader"
          role="table"
          style="min-width: 112.5px;"
        >
          <div
            class="stickyHeaders"
          >
            <div
              class="header"
              role="row"
              style="display: flex; flex: 1 0 auto; min-width: 112.5px;"
            >
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; cursor: pointer;"
                title="Toggle SortBy"
              >
                Alue
                <div
                  class="sortArrowWrapper isSorted"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <rect
                        height="24"
                        width="24"
                      />
                      <polygon
                        fill="currentColor"
                        points="10 5.5 11.5 7 7.5 11 20 11 20 13 7.5 13 11.5 17 10 18.5 3.5 12"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; cursor: pointer;"
                title="Toggle SortBy"
              >
                Yksityinen
                <div
                  class="sortArrowWrapper"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <rect
                        height="24"
                        width="24"
                      />
                      <polygon
                        fill="currentColor"
                        points="10 5.5 11.5 7 7.5 11 20 11 20 13 7.5 13 11.5 17 10 18.5 3.5 12"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; cursor: pointer;"
                title="Toggle SortBy"
              >
                Yritys
                <div
                  class="sortArrowWrapper"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <rect
                        height="24"
                        width="24"
                      />
                      <polygon
                        fill="currentColor"
                        points="10 5.5 11.5 7 7.5 11 20 11 20 13 7.5 13 11.5 17 10 18.5 3.5 12"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px; cursor: pointer;"
                title="Toggle SortBy"
              >
                Aika
                <div
                  class="sortArrowWrapper"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <rect
                        height="24"
                        width="24"
                      />
                      <polygon
                        fill="currentColor"
                        points="10 5.5 11.5 7 7.5 11 20 11 20 13 7.5 13 11.5 17 10 18.5 3.5 12"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 112.5px; width: 112.5px;"
              >
                Muokkaa
              </div>
            </div>
          </div>
          <div
            role="rowgroup"
          >
            <div
              class="rowWrapper"
            >
              <div
                role="row"
                style="display: flex; flex: 1 0 auto; min-width: 112.5px;"
              >
                <div
                  class="tableCell"
                  role="cell"
                  style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                >
                  Corporate Developer Mobility
                </div>
                <div
                  class="tableCell"
                  role="cell"
                  style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                >
                  10,20 €
                </div>
                <div
                  class="tableCell"
                  role="cell"
                  style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                >
                  20,40 €
                </div>
                <div
                  class="tableCell"
                  role="cell"
                  style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
                >
                  Kausi
                </div>
                <div
                  class="tableCell"
                  role="cell"
                  style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 112.5px; width: 112.5px;"
                >
                  <button>
                    <span
                      class="text brand span"
                    >
                      Muokkaa
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
